# fastapi-starter

./: .gitignore  .prettierrc.json  package-lock.json  pyproject.toml  requirements.txt
.devcontainer/: .env.example  devcontainer.json  docker-compose.yaml
.github/: labeller.yaml
.github/workflows/: add-to-project.yaml  publish.yaml  status-checks.yaml
fastapi_starter/: __init__.py  database.py
fastapi_starter/controllers/: auth.py  communications.py  organisations.py  users.py
fastapi_starter/dependencies/: database.py
fastapi_starter/models/: __init__.py  tokens.py
fastapi_starter/routers/: auth.py
fastapi_starter/schemas/: __init__.py
src/fastapi_starter/: __init__.py  version.py
src/fastapi_starter/controllers/: auth.py  communications.py  organisations.py  tokens.py  users.py
src/fastapi_starter/dependencies/: admin.py  database.py  owner.py  self.py
src/fastapi_starter/models/: __init__.py  organisations.py  tokens.py  users.py
src/fastapi_starter/routers/: auth.py  organisations.py  users.py
src/fastapi_starter/schemas/: __init__.py  organisations.py  tokens.py  users.py
